--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">prova1</string>
+    <string name="app_name">HeartAttApp</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
     <string name="Home">Home</string>
