--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="title_activity_charts">Charts</string>
     <string name="title_activity_login">Sign in</string>
     <string name="hint_word">Word...</string>
+    <string name="hint_systolic">Systolic Pressure</string>
+    <string name="hint_diastolic">Diastolic Pressure</string>
     <string name="button_save">Save</string>
     <string name="empty_not_saved">Word not saved because it is empty.</string>
     <!-- Strings related to login -->
